# cel-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  index.html  rust-toolchain.toml
.github/workflows/: docs.yaml  test.yaml
cel-rs/: Cargo.toml
cel-rs/src/: context.rs  eval.rs  function.rs  lib.rs  program.rs  std.rs  value.rs
cel-rs/src/parser/: ast.rs  cel.lalrpop  mod.rs  parse.rs
cel-rs/src/value/: bool.rs  bytes.rs  double.rs  error.rs  int.rs  map.rs  mod.rs  null.rs  ordering.rs  string.rs  ty.rs  uint.rs  value.rs
cel-rs/tests/: test.rs
cel-spec/: Cargo.toml  build.rs
cel-spec/src/: lib.rs
cel_spec/: Cargo.toml
cel_spec/src/: lib.rs
cel_spec/tests/: test.rs
parser/: Cargo.toml  build.rs
parser/src/: cel.lalrpop  lib.rs
pkg/: package.json  web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
program/: Cargo.toml
program/src/: context.rs  eval.rs  lib.rs  program.rs  value.rs
program/tests/: test.rs
src/: lib.rs
web/: Cargo.toml
